--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,14 +9,20 @@
 		<title>{{ page.title }}</title>
 	</head>
 	<body>
-		<nav>
-			<ul>
-				<li><a href="/">Home</a></li>
-				<li><a href="/about">About</a></li>
-				<li><a href="/cv">CV</a></li>
-				<li><a href="/blog">Blog</a></li>
-			</ul>
-		</nav>
+		<ul class="nav">
+			<li class="nav-item">
+				<a class="nav-link" href="/">Home</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="/about">About</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="/cv">CV</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="/blog">Blog</a>
+			</li>
+		</ul>
 		<div class="container">
 		
 		{{ content }}
